# riscv64-inline-hook

./: .clang-format  CMakeLists.txt  README.md  README_zh.md
compat/: dobby_compat.h
include/: rv64hook.h
src/: config.h  function_record.cc  function_record.h  hook_handle.cc  hook_handle.h  instruction_relocator.cc  logger.cc  logger.h  memory.cc  memory.h  memory_allocator.cc  memory_allocator.h  memory_space.h  rv64hook.cc  scoped_rwx_memory.cc  trampoline.cc  trampoline.h  trampoline.s
src/arch/aarch64/: README.md  aarch64_support.cc  trampoline_aarch64.S
src/arch/common/: asm.h  handle_offset.h  instruction_relocator.h  trampoline.h
src/arch/riscv64/: riscv64_relocator.h  riscv64_support.cc  trampoline_riscv64.h  trampoline_riscv64.s
src/core/: function_record.cc  function_record.h  hook_handle.cc  hook_handle.h  hook_locker.cc  hook_locker.h  logger.cc  logger.h  memory.cc  memory.h  rv64hook.cc  rv64hook_internal.h  scoped_rwx_memory.cc
src/libc/: asm.h  libc.h  memcpy_generic.cc  memcpy_vext.S  syscalls.cc
